# czn-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md
assets/: tailwind.css
src/: certificate.rs  dispenser.rs  main.rs  signing.rs  storage.rs
